--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/BrentFM/Bamazon#readme",
   "dependencies": {
     "boxen": "^4.1.0",
+    "cli-table": "^0.3.1",
+    "colors": "^1.3.3",
     "inquirer": "^6.5.1",
     "mysql": "github:mysqljs/mysql"
   }
